# ChangeLog for sys-fs/eudev
# Copyright 1999- Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-fs/eudev/ChangeLog,v 1.69 2013/09/03 13:35:06 ago Exp $

  03 Sep 2013; Agostino Sarubbo <ago@gentoo.org> eudev-1.1.ebuild:
  Stable for ia64, wrt bug #463910

  01 Sep 2013; Agostino Sarubbo <ago@gentoo.org> eudev-1.1.ebuild:
  Stable for alpha, wrt bug #463910

  20 Aug 2013; Anthony G. Basile <blueness@gentoo.org> eudev-1.1.ebuild:
  Stable arm, bug #463910

  15 Aug 2013; Patrick Lauer <patrick@gentoo.org> eudev-1.2-r1.ebuild,
  eudev-1.2.ebuild:
  Whitespace

  13 Aug 2013; Ian Stakenvicius <axs@gentoo.org> eudev-1.2-r1.ebuild,
  eudev-1.2.ebuild, eudev-9999.ebuild:
  dropped DOCS='' as it is not PMS-legal (bug 480892), reload hwdb if rebuilding
  or revbump only

  12 Aug 2013; Anthony G. Basile <blueness@gentoo.org> eudev-1.1.ebuild:
  Stable ppc ppc64, bug #463910

  10 Aug 2013; Agostino Sarubbo <ago@gentoo.org> eudev-1.1.ebuild:
  Stable for x86, wrt bug #463910

  10 Aug 2013; Agostino Sarubbo <ago@gentoo.org> eudev-1.1.ebuild:
  Stable for amd64, wrt bug #463910

  08 Aug 2013; Ian Stakenvicius <axs@gentoo.org> eudev-1.2-r1.ebuild,
  eudev-9999.ebuild:
  fixed configure options for non-native abi, bug 480288

  08 Aug 2013; Ian Stakenvicius <axs@gentoo.org>
  +files/eudev-selinux-timespan.patch, -files/eudev-fix-selinux.patch,
  eudev-1.1.ebuild, eudev-1.2-r1.ebuild, eudev-1.2.ebuild:
  Fixed compile issue on selinux (missing #define), clean an old patch

  08 Aug 2013; Jeroen Roovers <jer@gentoo.org> eudev-1.1.ebuild:
  Stable for HPPA (bug #463910).

  08 Aug 2013; Samuli Suominen <ssuominen@gentoo.org> eudev-1.2-r1.ebuild,
  eudev-9999.ebuild:
  Block revision of emul-linux-x86-baselibs that dropped the colliding files.

  07 Aug 2013; Ian Stakenvicius <axs@gentoo.org> eudev-9999.ebuild:
  Initial multilib-minimal.eclass conversion (to build libudev.so.1)

*eudev-1.2-r1 (07 Aug 2013)
