@@ -1,6 +1,11 @@
 # ChangeLog for sys-fs/eudev
 # Copyright 1999- Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/eudev/ChangeLog,v 1.69 2013/09/03 13:35:06 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/eudev/ChangeLog,v 1.70 2013/09/14 14:04:56 blueness Exp $
+
+*eudev-1.3 (14 Sep 2013)
+
+  14 Sep 2013; Anthony G. Basile <blueness@gentoo.org> +eudev-1.3.ebuild:
+  Version bump
 
   03 Sep 2013; Agostino Sarubbo <ago@gentoo.org> eudev-1.1.ebuild:
   Stable for ia64, wrt bug #463910
